--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -751,6 +751,7 @@ section
 	font-size: 110px;
 	font-weight: 600;
 	color: #ffffff;
+	padding-top:40px;
 	text-transform: uppercase;
 }
 .home_title h1 span
