--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -155,6 +155,62 @@ h6::selection
 {
 
 }
+.index_def
+{
+	color:white;
+	text-align: center;
+	font-size: 24px;
+}
+.builders
+{
+	text-align: center;
+	color:white;
+	font-size: 24px;
+	margin-bottom:0px;
+	left:0px;
+	top:0px;
+	position:relative;
+	padding-left:0px;
+}
+.aaron_button
+{
+	background: linear-gradient(to right, #2ac275, #cbdc0b, #2ac275);
+	border:0px;
+	border-radius: 20px;
+	width:140px;
+	color:white;
+	height:40px;
+}
+.aaron_button a
+{
+	color:white;
+}
+.index_dec
+{
+	position: absolute;
+	left:42%;
+}
+.Credits
+{
+
+}
+.index_header
+{
+	margin-top:240px;
+}
+.title
+{
+	font-size:40px;
+	color:white;
+	text-align: center;
+}
+.builders li
+{
+	width: auto;
+}
+.builders ul
+{
+}
 img
 {
 	max-width: 100%;
@@ -172,6 +228,10 @@ section
 	display: block;
 	position: relative;
 	box-sizing: border-box;
+}
+#information
+{
+	height:100vh;
 }
 .clear
 {
