--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -252,7 +252,7 @@ section
 .row_2 img
 {
 	height:275px;
-	width:auto;
+	width:527px ;
 	margin-right:1%;
 }
 .row_2
@@ -262,7 +262,7 @@ section
 .row_3 img
 {
 	height:275px;
-	width:auto;
+	width:527px ;
 	margin-right:1%;
 }
 .row_3
