--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -237,7 +237,7 @@ section
 {
 	height:275px;
 	width:427px ;
-	margin-right:5%;
+	margin-left:5%;
 }
 .sadf
 {
@@ -253,7 +253,7 @@ section
 {
 	height:275px;
 	width:427px ;
-	margin-right:5%;
+	margin-left:5%;
 }
 .row_2
 {
@@ -263,7 +263,7 @@ section
 {
 	height:275px;
 	width:427px ;
-	margin-right:5%;
+	margin-left:5%;
 }
 .intro_p
 {
