--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -179,7 +179,11 @@ h6::selection
 	border-radius: 20px;
 	width:140px;
 	color:white;
-	height:40px;
+	height:200%;
+	width:200%;
+	padding: 5%;
+	padding-bottom:10%;
+	padding-top: 10%;
 }
 .aaron_button a
 {
@@ -203,7 +207,7 @@ h6::selection
 .index_dec
 {
 	position: absolute;
-	left:44%;
+	left:40%;
 }
 .Credits
 {
