--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -212,6 +212,10 @@ h6::selection
 #picked
 {
 	text-align: center;
+	margin-top: 30px;
+	font-size: 30px;
+	color:black;
+	text-decoration: bold;
 }
 .aaron_button_quized a
 {
